# startupiq

./: .gitignore  CLAUDE.md  README.md  summary.md
.claude/: settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  dump.rdb  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_profiles_and_startup_ideas.py  0002_add_profile_creation_trigger.py  0003_create_jobs.py  0004_create_webhooks.py
backend/app/: main.py
backend/app/api/v1/: dashboard.py  evaluations.py  ideas.py  jobs.py  router.py  webhooks.py
backend/app/core/: arq.py  cache.py  config.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  idea.py  job.py  profile.py  webhook.py
backend/app/llm/: base.py  claude_provider.py  factory.py  features.py  openai_provider.py
backend/app/schemas/: idea.py  llm_results.py  webhook.py
backend/app/worker/: settings.py  tasks.py  webhooks.py
backend/scripts/: debug_jwt.py
backend/tests/: conftest.py  test_caching.py  test_evaluations.py  test_ideas.py  test_rate_limit.py  test_webhook_dispatch.py  test_webhooks.py  test_worker.py
book/: 00-preface.md  01-the-big-picture.md  02-project-setup.md  03-database-design.md  04-api-design.md  05-authentication.md  06-llm-abstraction.md  07-async-jobs.md  08-caching-rate-limiting.md  09-frontend.md  10-docker.md  11-webhooks.md  12-load-testing.md  13-kubernetes.md  14-cloud-cicd.md  15-epilogue.md  99-glossary.md  README.md  StartupIQ-Book.html
docker/: .env.example  docker-compose.yml
docs/: deployment.md  (+1 more)
(+40 files in other folders)
