[project]
name = "startupiq-backend"
version = "0.1.0"
description = "StartupIQ FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.4",
    "pyjwt[crypto]>=2.9",  # [crypto] pulls in `cryptography`, required to verify ES256 JWTs
    "python-dotenv>=1.0",
    "openai>=1.40",        # OpenAI provider (dev/testing)
    "anthropic>=0.69",     # Claude provider (production)
    "arq>=0.26",           # async Redis-backed job queue + worker
    "slowapi>=0.1.9",      # rate limiting (Redis-backed) for FastAPI
    "httpx>=0.27",         # async HTTP client (worker uses it to POST webhooks)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
